create endpoint for car,brand,model
